# watchwithfriends4

./: LICENCE  README.md
.github/workflows/: client.yml  rust.yml  server.yml
client/: .prettierignore  README.md  index.html  package.json
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/lib/: conn.ts  connMiddleware.ts  messages.ts
client/src/pages/Home/: Home.css  Home.tsx
client/src/pages/Info/: Info.css  Info.tsx
client/src/pages/Room/: Room.css  Room.tsx
client/src/pages/Room/Player/: Player.tsx
client/src/pages/RoomCodeEntry/: RoomCode.css  RoomCode.tsx
client/src/pages/Settings/: ServerChanger.tsx  Settings.tsx
client/src/store/: connection.ts  prefs.ts  room.ts  roomReducer.ts  store.ts  ui.ts  uiReducer.ts
client/src/themes/: Dark.css  Light.css
client/src/ui/: SideBar.css  SideBar.tsx  TopBar.css  TopBar.tsx
client/src/ui/modals/: modal.css
client/src/ui/modals/alert/: Alert.tsx  AlertWithChildren.tsx
client/src/ui/modals/prompt/: Prompt.tsx
client/src/ui/prompt/: Prompt.tsx
server/: .gitignore  Cargo.toml  Makefile  README.md
server/docs/: README.md  usage.md
server/src/: main.rs  room.rs  stats.rs  user.rs  ws.rs
