[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
lazy_static = "1.4.0"
tokio-tungstenite = "*"
serde = {version = "1.0.151", features=["derive"]}
serde_json = "1.0"
futures-util = "0.3.25"
uuid = {version = "1.2.2", features=["v4", "fast-rng"]}