[package]
name = "watchwithfriends-4"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
lazy_static = "1.4.0"
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"] }
serde = {version = "1.0.151", features=["derive"]}
serde_json = "1.0"
futures-util = "0.3.25"
uuid = {version = "1.2.2", features=["v4", "fast-rng"]}
rand = "0.8.5"
log = "0.4.17"
simple_logger = "4.0.0"